examples/type_system/failing/128_lambda_missing_arrow.flx
let f = \x x + 1
let after = 7
